fix: board position on small screen height

--- a/minesweeper/styles/styles.css
+++ b/minesweeper/styles/styles.css
@@ -61,7 +61,6 @@ body {
   max-width: 95%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   row-gap: 1rem;
 }
@@ -109,7 +108,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fill, 18px);
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 75px;
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   background-image: linear-gradient(
